# project_template

./: CMakeLists.txt  README.md
docs/: 404.html  index.html  index.xml  sitemap.xml
docs/categories/: index.html
docs/page/1/: index.html
docs/post/: index.html  index.xml
docs/post/hello/: index.html
docs/post/page/1/: index.html
docs/tags/: index.html
examples/: example1.cxx
public_html/: config.toml
public_html/content/: help
public_html/content/post/: hello.md
public_html/public/: index.xml  sitemap.xml
src/: DerpLibConfig.h.in
src/DERP/: CMakeLists.txt
src/DERP/include/: Derp.h  LinkDef.h  qcdnum2c.h
src/DERP/src/: Derp.cxx  qcdnum2c.cxx  qcdnumTest1.f  qcdnumTest2.f
src/config/: CMakeLists.txt  DerpLib-config.cxx  DerpLibConfig.cmake.in  DerpLibUseFile.cmake.in
src/runtest/: CMakeLists.txt  runtest.cxx
